# CUDAPlayground

./: CMakeLists.txt  README.md
include/: flags.h  main.h
include/utils/: cuda_utils.h
src/: flags.cc  main.cu  main.h
src/utils/: cuda_utils.h  queue.h  stream.h
